--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!--
-This is my index file for IT+ HTML site
+This is my index file for IT+ HTML site not all of this code is mine, i took some of my old code and some of my mates code and edited them both to work together
 --> 
 <html> 
 <head> 
