--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
 <!--
 This is my index file for IT+ HTML site not all of this code is mine, i took some of my old code and some of my mates code and edited them both to work together
-(at least) 4 pages
-colored background(s)
-an external CSS file
+(at least) 4 pages : Done
+colored background(s) : Done
+an external CSS file : 
 a table
 some javascript
 some form elements (input box, submit button) (doesn't have to work)
