--- a/htmltest.html
+++ b/htmltest.html
@@ -3,7 +3,7 @@
 <title>Will H</title> 
 <style>
 body {
-  background-image: url('ace.jpg');
+  background-image: url('ace.png');
 }
 </style>
 <form> 
