--- a/htmltest.html
+++ b/htmltest.html
@@ -4,6 +4,9 @@
 <style>
 body {
   background-image: url('ace.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 </style>
 <form> 
