--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@ This is my index file for IT+ HTML site not all of this code is mine, i took som
 (at least) 4 pages : Done
 colored background(s) : Done
 an external CSS file : 
-a table
-some javascript
-some form elements (input box, submit button) (doesn't have to work)
-pictures
-a table
-an animated gif with your face
-an embedded p5js game/thing
+some javascript : Done
+some form elements (input box, submit button) (doesn't have to work) : Done
+pictures : Done
+a table : Done
+an animated gif with your face : Done
+an embedded p5js game/thing :
 --> 
 <html> 
 <head> 
